welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: value update is not a member of String
  if (litMessage()= "R" ) {
      ^BDRBuggle:6: error: value update is not a member of String
  } else if (litMessage() = "L") {
             ^BDRBuggle:9: error: value update is not a member of String
  } else if (litMessage()="I") {
             ^BDRBuggle:12: error: value update is not a member of String
  } else if (litMessage()="A") {
             ^BDRBuggle:14: error: value update is not a member of String
  } else if (litMessage()="B") {
             ^BDRBuggle:17: error: value update is not a member of String
  } else if (litMessage()="C") {
             ^BDRBuggle:21: error: value update is not a member of String
  } else if (litMessage()="Z") {
             ^BDRBuggle:23: error: value update is not a member of String
  } else if (litMessage()="Y") {
             ^BDRBuggle:26: error: value update is not a member of String
  } else if (litMessage()="X") {
             ^